--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=productsDelivery
+spring.datasource.url=jdbc:postgresql://localhost:5435/delivery_db
+spring.datasource.username=admin
+spring.datasource.password=1234
+spring.jpa.generate-ddl=true
+
