--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <name>productsDelivery</name>
     <description>productsDelivery</description>
     <properties>
-        <java.version>22</java.version>
+        <java.version>17</java.version>
     </properties>
     <dependencies>
         <dependency>
@@ -56,9 +56,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <excludeDockerCompose>fasle</excludeDockerCompose>
-                </configuration>
+                <version>2.5.1</version>
             </plugin>
         </plugins>
     </build>
