--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=productsDelivery
-spring.datasource.url=jdbc:postgresql://localhost:5435/delivery_db
+spring.datasource.url=jdbc:postgresql://db:5432/delivery_db
 spring.datasource.username=admin
 spring.datasource.password=1234
 spring.jpa.generate-ddl=true
