--- a/front/package.json
+++ b/front/package.json
@@ -10,12 +10,23 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "esbuild-wasm": "^0.21.1",
     "vue": "^3.4.21",
     "vue-cookies": "^1.8.4",
     "vue-router": "^4.3.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
-    "vite": "^5.2.8"
+    "vite": "^5.2.8",
+    "vite-plugin-wasm": "^3.3.0"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "^4.17.2"
+  },
+  "overrides": {
+    "vite": {
+      "rollup": "npm:@rollup/wasm-node",
+      "esbuild": "npm:esbuild-wasm@latest"
+    }
   }
 }
