--- a/front/package.json
+++ b/front/package.json
@@ -26,7 +26,7 @@
   "overrides": {
     "vite": {
       "rollup": "npm:@rollup/wasm-node",
-      "esbuild": "npm:esbuild-wasm@latest"
+      "esbuild": "npm:esbuild-wasm@0.21.2"
     }
   }
 }
