--- a/front/package.json
+++ b/front/package.json
@@ -18,8 +18,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
     "vite": "^5.2.8",
-    "vite-plugin-wasm": "^3.3.0",
-    "esbuild-wasm": "0.21.1"
+    "vite-plugin-wasm": "^3.3.0"
   },
   "optionalDependencies": {
     "@rollup/rollup-linux-x64-gnu": "^4.17.2"
@@ -27,7 +26,7 @@
   "overrides": {
     "vite": {
       "rollup": "npm:@rollup/wasm-node",
-      "esbuild": "npm:esbuild-wasm@0.21.1"
+      "esbuild": "npm:esbuild-wasm@latest"
     }
   }
 }
