--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,7 @@ services:
       - "3000:5173"
     volumes:
       - ./front:/app
+      - /app/node_modules
     stdin_open: true
     tty: true
     networks:
