--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -2,6 +2,8 @@ FROM node:latest AS builder
 
 WORKDIR /app
 
+ENV PATH /app/node_modules/.bin:$PATH
+
 COPY ./package.json .
 COPY ./vite.config.js .
 RUN npm install
